--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,4 @@
-@import './common';
-@import './example';
+@import './base/common.scss';
+@import './utils/variables.scss';
+@import './components/container.scss';
+@import './layout/header.scss';
