--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,12 @@
 <header class='header '>
     <div class='container header-container'>
-        <h1>Hello</h1>
+        <nav>
+            <a href="/">
+                <svg class="header-icon">
+                    <use href="./images/sprite.svg#icon-logo"></use>
+                </svg>
+            </a>
+        </nav>
     </div>
 </header>
 
