--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,24 +1,30 @@
-<header class='header '>
-    <div class='container header-container'>
-        <nav class="main-nav">
-            <a href="/" class="header-logo">
-                <svg class="header-icon">
-                    <use href="./images/sprite.svg#icon-logo"></use>
-                </svg>
-                Finance 
-                <span class="logo-right">Ledger</span>
-            </a>
-            <ul class="nav-list">
-                <li class="nav-item">Home</li>
-                <li class="nav-item">About</li>
-                <li class="nav-item">Cases</li>
-                <li class="nav-item">Blog</li>
-                <li class="nav-item">Contact</li>
-            </ul>
-        </nav>
-    </div>
+<header class="header">
+  <div class="container header-container">
+    <nav class="main-nav">
+      <a href="/" class="header-logo">
+        <svg class="header-icon">
+          <use href="./images/sprite.svg#icon-logo"></use>
+        </svg>
+        Finance
+        <span class="logo-right">Ledger</span>
+      </a>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+            <a href="/" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+            <a href="/" class="nav-link">Cases</a>
+        </li>
+        <li class="nav-item">
+            <a href="/" class="nav-link">Blog</a>
+        </li>
+        <li class="nav-item">
+            <a href="/" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </header>
-
-
-
-
