--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,6 +2,10 @@
     <div class="container">
         <h1 class="hero-title">The Sky Is The Limit</h1>
         <p class="hero-text">We provide world class financial assistance</p>
-        <button type="button">Read More</button>
+        <button type="button" class="btn btn-accent hero-btn">
+            <svg width='9' height='16' class="hero-icon">
+                <use src="./../images/sprite.svg#icon-arrow" width='9' height='16'></use>
+            </svg>
+            Read More</button>
     </div>
 </section>
