--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,15 +1,5 @@
 <section class="about">
   <div class="about-left">
-    <picture>
-      <source
-        srcset="./images/home/people.webp 1x, ./images/home/people@2x.webp 2x"
-        type="image/webp"
-      />
-      <source
-        srcset="./images/home/people.jpg 1x, ./images/home/people@2x.jpg 2x"
-      />
-      <img src="./images/home/people.jpg" alt="Our team" class="about-image" />
-    </picture>
   </div>
   <div class="about-right">
     <div class="container">
@@ -21,7 +11,7 @@
       dolore explicabo ab dolores itaque rerum temporibus doloribus iste maiores
       deleniti?
     </p>
-    <button class="about-btn btn">Read More</button>
+    <button class="about-btn btn" type="button">Read More</button>
   </div>
 </div>
 </section>
