--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,7 +1,33 @@
+.about {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
 .about-image {
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+.about-left {
+  max-width: 100%;
+  height: 220px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url('./../images/home/people.jpg');
+
+  @media screen and (min-device-pixel-ratio: 2x),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(./../images/home/people@2x.jpg);
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 50%;
+    height: auto;
+  }
 }
 
 .about-right {
@@ -12,6 +38,7 @@
   @media screen and (min-width: 768px) {
     padding-top: 62px;
     padding-bottom: 62px;
+    width: 50%;
   }
 
   @media screen and (min-width: 1360px) {
@@ -62,5 +89,15 @@
 }
 
 .about-btn {
-    margin-top: 24px;
+  margin-top: 24px;
+  background-color: transparent;
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+
+  &:hover, &:focus {
+    background-color: #F4F4F4;
+    color:#28a745;
+    border-color:#28a745;
+
+  }
 }
