add cases images

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,9 +3,9 @@
   </div>
   <div class="about-right">
     <div class="container">
-    <p class="about-pre-title">What you are looking for</p>
-    <h2 class="about-title">We provide bespoke solutions</h2>
-    <p class="about-text">
+    <p class="pre-title about-pre-title">What you are looking for</p>
+    <h2 class="about-title title">We provide bespoke solutions</h2>
+    <p class="text about-text">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum
       dignissimos quae laudantium asperiores nam aliquid impedit harum illum
       dolore explicabo ab dolores itaque rerum temporibus doloribus iste maiores
