--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -21,7 +21,7 @@
   @media screen and (min-device-pixel-ratio: 2x),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: url(./../images/home/people@2x.jpg);
+    background-image: url('./../images/home/people@2x.jpg');
   }
 
   @media screen and (min-width: 768px) {
