--- a/src/sass/layout/_blog.scss
+++ b/src/sass/layout/_blog.scss
@@ -1,3 +1,10 @@
+.blog {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+}
+
 .blog-left {
   max-width: 100%;
   height: 247px;
@@ -11,6 +18,11 @@
     (min-resolution: 2dppx) {
     background-image: url('./../images/home/blog.jpg');
   }
+
+  @media screen and (min-width: 768px) {
+    width: 50%;
+    height: auto;
+  }
 }
 
 .blog-right {
@@ -22,6 +34,8 @@
   @media screen and (min-width: 768px) {
     padding-top: 59px;
     padding-bottom: 59px;
+
+    width: 50%;
   }
 
   @media screen and (min-width: 1360px) {
@@ -51,4 +65,10 @@
     color: var(--secondary-color);
 
     background-color: transparent;
+
+    &:hover, &:focus {
+        background-color: #F4F4F4;
+        color: #0284D0;
+        border: 1px solid #0284D0;
+    }
 }
