add team section

--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,8 +1,8 @@
 <section class="team">
   <div class="container">
-    <p class="pre-title">Who we are</p>
-    <h2 class="title">Our Professional Team</h2>
-    <p class="text">
+    <p class="pre-title team-pre-title">Who we are</p>
+    <h2 class="title team-title">Our Professional Team</h2>
+    <p class="text team-text">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
       sapiente!
     </p>
