add team members

--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -26,3 +26,14 @@
     text-align: center;
     padding-top: 24px;
 }
+
+.team-list {
+text-align: center;
+
+margin-top: 63px;
+}
+
+.member-image {
+    max-width: 100%;
+    height: auto;
+}
