--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -7,9 +7,78 @@
       sapiente!
     </p>
     <ul class="team-list">
-        <li class="team-item"></li>
-        <li class="team-item"></li>
-        <li class="team-item"></li>
+      <li class="team-item">
+        <picture>
+          <source
+            srcset="
+              ./images/team/person1.webp    1x,
+              ./images/team/person1@2x.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
+              ./images/team/person1.jpg    1x,
+              ./images/team/person1@2x.jpg 2x
+            "
+          />
+          <img
+            src="./images/team/person1.jpg"
+            alt="Team member"
+            class="member-image"
+          />
+        </picture>
+        <h3 class="team-member">John Doe</h3>
+        <p class="team-member-desc">President</p>
+      </li>
+      <li class="team-item">
+        <picture>
+          <source
+            srcset="
+              ./images/team/person2.webp    1x,
+              ./images/team/person2@2x.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
+              ./images/team/person2.jpg    1x,
+              ./images/team/person2@2x.jpg 2x
+            "
+          />
+          <img
+            src="./images/team/person2.jpg"
+            alt="Team member"
+            class="member-image"
+          />
+        </picture>
+        <h3 class="team-member">Jane Doe</h3>
+        <p class="team-member-desc">Vice President</p>
+      </li>
+      <li class="team-item">
+        <picture>
+          <source
+            srcset="
+              ./images/team/person3.webp    1x,
+              ./images/team/person3@2x.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
+              ./images/team/person3.jpg    1x,
+              ./images/team/person3@2x.jpg 2x
+            "
+          />
+          <img
+            src="./images/team/person3.jpg"
+            alt="Team member"
+            class="member-image"
+          />
+        </picture>
+        <h3 class="team-member">Steve Smith</h3>
+        <p class="team-member-desc">Marketing Head</p>
+      </li>
     </ul>
   </div>
 </section>
