--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -29,7 +29,7 @@
           />
         </picture>
         <h3 class="team-member">John Doe</h3>
-        <p class="team-member-desc">President</p>
+        <p class="team-member-position">President</p>
       </li>
       <li class="team-item">
         <picture>
@@ -53,7 +53,7 @@
           />
         </picture>
         <h3 class="team-member">Jane Doe</h3>
-        <p class="team-member-desc">Vice President</p>
+        <p class="team-member-position">Vice President</p>
       </li>
       <li class="team-item">
         <picture>
@@ -77,7 +77,7 @@
           />
         </picture>
         <h3 class="team-member">Steve Smith</h3>
-        <p class="team-member-desc">Marketing Head</p>
+        <p class="team-member-position">Marketing Head</p>
       </li>
     </ul>
   </div>
