--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -1,39 +1,97 @@
 .team .container {
-    padding-top: 72px;
-    padding-bottom: 50px;
+  padding-top: 72px;
+  padding-bottom: 50px;
 
-    @media screen and (min-width: 768px) {
-        padding-top: 50px;
-        padding-bottom: 40px;
-    }
+  @media screen and (min-width: 768px) {
+    padding-top: 50px;
+    padding-bottom: 40px;
+  }
 
-    @media screen and (min-width: 1360px) {
-        padding-top: 80px;
-        padding-bottom: 88px;
-    }
+  @media screen and (min-width: 1360px) {
+    padding-top: 80px;
+    padding-bottom: 88px;
+  }
 }
 
 .team-pre-title {
-    text-align: center;
+  text-align: center;
 }
 
 .team-title {
-    text-align: center;
-    padding-top: 16px;
+  text-align: center;
+  margin-top: 16px;
 }
 
 .team-text {
-    text-align: center;
-    padding-top: 24px;
+  text-align: center;
+  margin-top: 24px;
 }
 
 .team-list {
-text-align: center;
+  text-align: center;
 
-margin-top: 63px;
+  margin-top: 63px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 36px;
+  }
+}
+
+.team-item {
+
+    @media screen and (max-width: 767px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
+          }
+    }
+
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 36px) / 3);
+        &:not(:last-child) {
+            margin-right: 18px;
+        }
+    }
+
 }
 
 .member-image {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.team-member {
+  margin-top: 16px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.35;
+
+  @media screen and (min-width: 1360px) {
+    font-size: 32px;
+    line-height: 1;
+  }
+
+  @media screen and (min-width: 1360px) {
+    margin-top: 14px;
+  }
+}
+
+.team-member-position {
+  margin-top: 8px;
+
+  font-size: 16px;
+  line-height: 1.38;
+
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+    line-height: 1.39;
+  }
 }
