--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -5,12 +5,14 @@
       <h2 class="title contact-title">Request Callback</h2>
       <form action="" class="contact-form">
         <div class="form-field name-field">
-          <label for="name">Enter your name</label>
           <input type="input" id="name" class="form-input"/>
+          <label for="name" class="form-label">Enter your name</label>
+          
         </div>
         <div class="form-field">
-          <label for="email">Enter email*</label>
           <input type="email" id="email" class="form-input"/>
+          <label for="email" class="form-label">Enter email*</label>
+          
         </div>
 
         <button type="submit" class="btn form-btn">Send</button>
