--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -1,8 +1,7 @@
 .contact {
-    @media screen and (min-width: 768px) {
-        display: flex;
-
-    }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 
 .contact-left {
@@ -14,15 +13,15 @@
   background-image: url('./../images/home/contact.jpg');
 
   @media screen and (min-device-pixel-ratio: 2x),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  background-image: url('./../images/home/contact@2x.jpg');
-}
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url('./../images/home/contact@2x.jpg');
+  }
 
-@media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     width: 50%;
     height: auto;
-}
+  }
 }
 
 .contact-right {
@@ -49,45 +48,57 @@
 }
 
 .contact-form {
-    margin-top: 69px;
+  margin-top: 69px;
 
-    @media screen and (min-width: 768px) {
-        margin-top: 24px;
-    }
+  @media screen and (min-width: 768px) {
+    margin-top: 24px;
+  }
 
-    @media screen and (min-width: 1360px) {
-        margin-top: 31px;
-    }
+  @media screen and (min-width: 1360px) {
+    margin-top: 31px;
+  }
 }
 .name-field {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 
-    @media screen and (min-widt: 1360px) {
-        margin-bottom: 26px;
-}
+  @media screen and (min-widt: 1360px) {
+    margin-bottom: 26px;
+  }
 }
 
 .form-input {
-    width: 100%;
-    border: none;
-    padding-top: 16px;
-    padding-bottom: 16px;
+  width: 100%;
+  border: none;
+  padding-top: 16px;
+  padding-bottom: 16px;
 
-    // &:not(:last-child) {
-    //     margin-bottom: 16px;
+  // &:not(:last-child) {
+  //     margin-bottom: 16px;
 
-    //     @media screen and (min-widt: 1360px) {
-    //         margin-bottom: 26px;
-    //     }
-    // }
+  //     @media screen and (min-widt: 1360px) {
+  //         margin-bottom: 26px;
+  //     }
+  // }
+}
+
+.form-label {
+  font-size: 16px;
+  line-height: 1.44;
+
+  color: #808080;
+
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+    line-height: 1.39;
+  }
 }
 
 .form-btn {
-    margin-top: 24px;
-    color: var(--secondary-color);
-    background-color:  #28A745;
+  margin-top: 24px;
+  color: var(--secondary-color);
+  background-color: #28a745;
 
-    @media screen and (min-widt: 1360px) {
-        margin-top: 40px;
-    }
+  @media screen and (min-widt: 1360px) {
+    margin-top: 40px;
+  }
 }
