--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -60,6 +60,7 @@
 }
 .name-field {
   margin-bottom: 16px;
+  position: relative;
 
   @media screen and (min-widt: 1360px) {
     margin-bottom: 26px;
@@ -84,6 +85,10 @@
 .form-label {
   font-size: 16px;
   line-height: 1.44;
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+  left: 8px;
 
   color: #808080;
 
