--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -5,12 +5,12 @@
       <h2 class="title contact-title">Request Callback</h2>
       <form action="" class="contact-form">
         <div class="form-field name-field">
-          <input type="input" id="name" class="form-input"/>
+          <input type="input" id="name" class="form-input" placeholder=" "/>
           <label for="name" class="form-label">Enter your name</label>
           
         </div>
         <div class="form-field">
-          <input type="email" id="email" class="form-input"/>
+          <input type="email" id="email" class="form-input" placeholder=" "/>
           <label for="email" class="form-label">Enter email*</label>
           
         </div>
