--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -75,23 +75,25 @@
   border: none;
   padding-top: 16px;
   padding-bottom: 16px;
+  padding-left: 8px;
+}
 
-  // &:not(:last-child) {
-  //     margin-bottom: 16px;
-
-  //     @media screen and (min-widt: 1360px) {
-  //         margin-bottom: 26px;
-  //     }
-  // }
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  transform: translateY(-46px);
 }
 
 .form-label {
   font-size: 16px;
   line-height: 1.44;
   position: absolute;
-  transform: translateY(-50%);
+  
   top: 50%;
   left: 8px;
+
+  transform: translateY(-50%);
+
+  transition: transform 250ms linear;
 
   color: #808080;
 
