--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -3,7 +3,7 @@
   <div class="contact-right">
     <div class="container">
       <h2 class="title contact-title">Request Callback</h2>
-      <form action="" class="contact-form">
+      <form action="" class="contact-form" autocomplete="off">
         <div class="form-field name-field">
           <input type="input" id="name" class="form-input" placeholder=" "/>
           <label for="name" class="form-label">Enter your name</label>
