add links and hover effects in header

--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,4 +1,4 @@
-<section class="blog">
+<section class="blog" id="blog">
   <div class="blog-left"></div>
   <div class="blog-right">
     <div class="container">
