--- a/src/partials/cases.html
+++ b/src/partials/cases.html
@@ -1,4 +1,4 @@
-<section class="cases">
+<section class="cases" id="cases">
   <div class="container cases-container">
     <p class="pre-title cases-pre-title">This is what we do</p>
     <h2 class="cases-title title">Business Cases</h2>
