--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,4 +1,4 @@
-<section class="contact">
+<section class="contact" id="contact">
   <div class="contact-left"></div>
   <div class="contact-right">
     <div class="container">
