--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,28 +1,27 @@
-<header class="header">
+<header class="header" id="header">
   <div class="container header-container">
     <nav class="main-nav">
       <a href="/" class="header-logo">
         <svg class="header-icon">
           <use href="./images/sprite.svg#icon-logo"></use>
         </svg>
-        Finance
-        <span class="logo-right">Ledger</span>
+        Finance<span class="logo-right">Ledger</span>
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a href="/" class="nav-link">Home</a>
+          <a href="#header" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-            <a href="/" class="nav-link">About</a>
+            <a href="#about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-            <a href="/" class="nav-link">Cases</a>
+            <a href="#cases" class="nav-link">Cases</a>
         </li>
         <li class="nav-item">
-            <a href="/" class="nav-link">Blog</a>
+            <a href="#blog" class="nav-link">Blog</a>
         </li>
         <li class="nav-item">
-            <a href="/" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link">Contact</a>
         </li>
       </ul>
     </nav>
