--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -42,6 +42,14 @@
     font-size: 35px;
     line-height: 1.37;
   }
+
+  transform: scale(1);
+
+  transition: transform 250ms linear;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 .logo-right {
@@ -86,6 +94,8 @@
 }
 
 .nav-item {
+  padding-bottom: 5px;
+  padding-top: 5px;
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-right: 12px;
@@ -103,6 +113,12 @@
       margin-right: 40px;
     }
   }
+
+  transition: border-bottom 250ms linear;
+
+  &:hover, &:focus {
+    border-bottom: 1px solid #28A745;
+  }
 }
 
 .nav-link {
@@ -118,7 +134,7 @@
         line-height: 1.39;
       }
 
-      &:hover, &:focus {
-        text-decoration: underline;
-      }
+      // &:hover, &:focus {
+      //   text-decoration: underline;
+      // }
 }
