--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -8,74 +8,176 @@
     </p>
     <ul class="team-list">
       <li class="team-item">
-        <picture>
-          <source
-            srcset="
-              ./images/team/person1.webp    1x,
-              ./images/team/person1@2x.webp 2x
-            "
-            type="image/webp"
-          />
-          <source
-            srcset="
-              ./images/team/person1.jpg    1x,
-              ./images/team/person1@2x.jpg 2x
-            "
-          />
-          <img
-            src="./images/team/person1.jpg"
-            alt="Team member"
-            class="member-image"
-          />
-        </picture>
+        <div class="thumb">
+          <picture>
+            <source
+              srcset="
+                ./images/team/person1.webp    1x,
+                ./images/team/person1@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/team/person1.jpg    1x,
+                ./images/team/person1@2x.jpg 2x
+              "
+            />
+            <img
+              src="./images/team/person1.jpg"
+              alt="Team member"
+              class="member-image"
+            />
+          </picture>
+          <div class="overlay">
+            <ul class="footer-list social-list">
+              <li class="footer-item">
+                <a href="" class="team-link">
+                  <svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class="team-link"
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-youtube"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <h3 class="team-member">John Doe</h3>
         <p class="team-member-position">President</p>
       </li>
       <li class="team-item">
-        <picture>
-          <source
-            srcset="
-              ./images/team/person2.webp    1x,
-              ./images/team/person2@2x.webp 2x
-            "
-            type="image/webp"
-          />
-          <source
-            srcset="
-              ./images/team/person2.jpg    1x,
-              ./images/team/person2@2x.jpg 2x
-            "
-          />
-          <img
-            src="./images/team/person2.jpg"
-            alt="Team member"
-            class="member-image"
-          />
-        </picture>
+        <div class="thumb">
+          <picture>
+            <source
+              srcset="
+                ./images/team/person2.webp    1x,
+                ./images/team/person2@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/team/person2.jpg    1x,
+                ./images/team/person2@2x.jpg 2x
+              "
+            />
+            <img
+              src="./images/team/person2.jpg"
+              alt="Team member"
+              class="member-image"
+            />
+          </picture>
+          <div class="overlay">
+            <ul class="footer-list social-list">
+              <li class="footer-item">
+                <a href="" class='team-link'>
+                  <svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-youtube"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <h3 class="team-member">Jane Doe</h3>
         <p class="team-member-position">Vice President</p>
       </li>
       <li class="team-item">
-        <picture>
-          <source
-            srcset="
-              ./images/team/person3.webp    1x,
-              ./images/team/person3@2x.webp 2x
-            "
-            type="image/webp"
-          />
-          <source
-            srcset="
-              ./images/team/person3.jpg    1x,
-              ./images/team/person3@2x.jpg 2x
-            "
-          />
-          <img
-            src="./images/team/person3.jpg"
-            alt="Team member"
-            class="member-image"
-          />
-        </picture>
+        <div class="thumb">
+          <picture>
+            <source
+              srcset="
+                ./images/team/person3.webp    1x,
+                ./images/team/person3@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/team/person3.jpg    1x,
+                ./images/team/person3@2x.jpg 2x
+              "
+            />
+            <img
+              src="./images/team/person3.jpg"
+              alt="Team member"
+              class="member-image"
+            />
+          </picture>
+          <div class="overlay">
+            <ul class="footer-list social-list">
+              <li class="footer-item">
+                <a href="" class='team-link'>
+                  <svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-youtube"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="" class='team-link'
+                  ><svg width="35" height="35" class="footer-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <h3 class="team-member">Steve Smith</h3>
         <p class="team-member-position">Marketing Head</p>
       </li>
