--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -69,6 +69,8 @@
   color: var(--secondary-color);
   border: 1px solid var(--secondary-color);
 
+  transition: all 250ms linear;
+
   &:hover, &:focus {
     background-color: #F4F4F4;
     color:#28a745;
