--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -59,6 +59,10 @@
             margin-right: 18px;
         }
     }
+}
+
+.thumb {
+  position: relative;
 
 }
 
@@ -66,6 +70,29 @@
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+.overlay {
+  background-color: rgba(4, 4, 4, .5);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0;
+
+  transition: opacity 250ms linear;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+}
+
+.thumb:hover .overlay {
+  opacity: 1;
 }
 
 .team-member {
@@ -94,4 +121,8 @@
     font-size: 18px;
     line-height: 1.39;
   }
+}
+
+.team-link:hover .footer-icon {
+  fill: rgba(255, 255, 255, .8);
 }
