--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -6,6 +6,26 @@
   background-size: cover;
   background-position: center;
 
+  .webp & {
+    background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url(./../images/home/showcase.webp);
+
+  @media screen and (min-device-pixel-ratio: 2x),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),
+      url(./../images/home/showcase@2x.webp);
+  }
+  }
+
   background-image: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.5),
