add lightbox gallery

--- a/src/partials/cases.html
+++ b/src/partials/cases.html
@@ -8,6 +8,7 @@
     </p>
     <ul class="cases-list">
         <li class="cases-item">
+          <a href="./images/cases/cases1@2x.jpg" class="gallery-link" data-lightbox = 'gallery'>
             <picture>
                 <source
                   srcset="
@@ -28,8 +29,10 @@
                   class="cases-image"
                 />
               </picture>
+            </a>
         </li>
         <li class="cases-item">
+          <a href="./images/cases/cases3@2x.jpg" class="gallery-link" data-lightbox = 'gallery'>
             <picture>
                 <source
                   srcset="
@@ -50,8 +53,10 @@
                   class="cases-image"
                 />
               </picture>
+            </a>
         </li>
         <li class="cases-item">
+          <a href="./images/cases/cases5@2x.jpg" class="gallery-link" data-lightbox = 'gallery'>
             <picture>
                 <source
                   srcset="
@@ -72,9 +77,11 @@
                   class="cases-image"
                 />
               </picture>
+            </a>
         </li>
 
         <li class="cases-item">
+          <a href="./images/cases/cases7@2x.jpg" class="gallery-link" data-lightbox = 'gallery'>
             <picture>
                 <source
                   srcset="
@@ -95,8 +102,10 @@
                   class="cases-image"
                 />
               </picture>
+            </a>
         </li>
         <li class="cases-item">
+          <a href="./images/cases/cases2@2x.jpg" class="gallery-link" data-lightbox = 'gallery'>
             <picture>
                 <source
                   srcset="
@@ -117,8 +126,10 @@
                   class="cases-image"
                 />
               </picture>
+            </a>
         </li>
         <li class="cases-item">
+          <a href="./images/cases/cases4@2x.jpg" class='gallery-link' data-lightbox = 'gallery'>
             <picture>
                 <source
                   srcset="
@@ -139,6 +150,7 @@
                   class="cases-image"
                 />
               </picture>
+            </a>
         </li>
     </ul>
   </div>
