--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -46,24 +46,27 @@
 }
 
 .team-item {
-
-    @media screen and (max-width: 767px) {
-        &:not(:last-child) {
-            margin-bottom: 30px;
-          }
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
     }
+  }
 
-    @media screen and (min-width: 768px) {
-        width: calc((100% - 36px) / 3);
-        &:not(:last-child) {
-            margin-right: 18px;
-        }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 36px) / 3);
+    &:not(:last-child) {
+      margin-right: 18px;
     }
+  }
 }
 
 .thumb {
   position: relative;
 
+  &:hover,
+  &:focus {
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  }
 }
 
 .member-image {
@@ -73,7 +76,7 @@
 }
 
 .overlay {
-  background-color: rgba(4, 4, 4, .5);
+  background-color: rgba(4, 4, 4, 0.5);
 
   display: flex;
   justify-content: center;
@@ -88,7 +91,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-
 }
 
 .thumb:hover .overlay {
@@ -124,5 +126,5 @@
 }
 
 .team-link:hover .footer-icon {
-  fill: rgba(255, 255, 255, .8);
+  fill: rgba(255, 255, 255, 0.8);
 }
