--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -115,7 +115,7 @@
   margin-top: 24px;
 
   &:hover, &:focus {
-    background-color: #2EBF4F;
+    background-color: rgba(40, 167, 69, .8);
   }
 
   &::before {
