--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a href="#header" class="nav-link">Home</a>
+          <a href="#home" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
             <a href="#about" class="nav-link">About</a>
