--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="home">
     <div class="container">
         <h1 class="hero-title">The Sky Is The Limit</h1>
         <p class="hero-text">We provide world class financial assistance</p>
