--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -58,6 +58,7 @@
       margin-right: 18px;
     }
   }
+
 }
 
 .thumb {
@@ -66,6 +67,7 @@
   &:hover,
   &:focus {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    transform: scale(1.1);
   }
 }
 
@@ -73,6 +75,10 @@
   max-width: 100%;
   height: auto;
   display: block;
+
+  .thumb:hover &{
+    opacity: 0.6;
+  }
 }
 
 .overlay {
