--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
   <div class="container header-container">
     <nav class="main-nav">
-      <a href="/" class="header-logo">
+      <a href="#home" class="header-logo">
         <svg class="header-icon">
           <use href="./images/sprite.svg#icon-logo"></use>
         </svg>
