--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -50,6 +50,8 @@
 .contact-form {
   margin-top: 69px;
 
+  position: relative;
+
   @media screen and (min-width: 768px) {
     margin-top: 24px;
   }
@@ -120,10 +122,13 @@
 }
 
 .form-text {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
   display: flex;
   align-items: center;
   color: red;
-  margin-top: 8px;
+  margin-top: 5px;
 
 
   &::before {
