add warning behavior

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -20,11 +20,11 @@
             id="email"
             name="email"
             class="form-input"
-            required
+            
             placeholder=" "
           />
           <label for="email" class="form-label">Enter email*</label>
-          <p class="form-text">This is a required field</p>
+          <p class="form-text invisible">This is a required field</p>
         </div>
 
         <button type="submit" class="btn form-btn">Send</button>
