--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,7 @@
-<!-- <div class="backdrop">
+<div class="backdrop is-hidden" >
     <div class="modal">
         <h2>Thank you!</h2>
         <p>You form submission has been received.</p>
-        <button class="modal-btn">&#8592; Back to our cite</button>
+        <button type="button" class="modal-btn">&#8592; Back to our cite</button>
     </div>
-</div> -->
+</div>
